style.css
body {
  background-image: url(imgs/bg-pattern-desktop.svg);
  margin: 0px;
}

#mobileImg {
  display: none;
}

.mainContainer {
  display: flex;
  flex-direction: row;
  height: 400px;
  margin: 0px;
}

.leftSide {
  height: auto;
  width: 50%;
  position: relative;
  left: 100px;
  top: 100px;
}

.leftSide span {
  font-weight: 200;
  color: hsl(359, 31%, 70%);
  font-size: 60px;
}

.leftSide h1 {
  font-family: "Josefin Sans", sans-serif;
  letter-spacing: 10px;
  color: hsl(353, 7%, 24%);
  font-size: 60px;
  font-weight: 400;
}

.leftSide p {
  font-family: "Josefin Sans", sans-serif;
  color: hsl(0, 23%, 79%);
  font-size: 25px;
  line-height: 30px;
}

.rightSide {
  width: 50%;
}

.rightSide img {
  width: 100%;
  height: 1000px;
}

.email {
  display: flex; /* Use flexbox to align items */
}

.email input {
  border-radius: 20px;
  border-style: none;
  border: solid 1px hsl(0, 23%, 79%);
  height: 50px;
  width: 400px;
  font-family: "Josefin Sans", sans-serif;
  font-size: 15px;
  text-indent: 20px;
  color: hsl(0, 23%, 79%);
}

.submitImage {
  position: relative;
  left: 35px;
  top: 10px;
  border-radius: 20px;
  border-style: none;
  height: 30px;
  width: 30px; /* Adjust the width of the button as needed */
  cursor: pointer;
  margin: auto;
  display: inline-block;
}

.imgBackground {
  position: relative;
  right: 97px;
  height: auto;
  width: 100px;
  background-image: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
  display: inline-block;
  border-radius: 30px;
}

@media screen and (max-width: 1530px) {
  .mainContainer {
    display: flex;
    flex-direction: column;
  }

  .leftSide {
    position: relative;
    top: 750px;
    width: 300px;
  }

  .leftSide img {
    position: relative;
    bottom: 660px;
    right: 80px;
  }

  .leftSide h1,
  span {
    text-align: center;
  }

  .leftSide p {
    text-align: center;
  }

  .leftSide h1,
  p {
    position: relative;
    right: 50px;
    bottom: 240px;
  }

  .rightSide {
    position: relative;
    bottom: 550px;
  }

  .rightSide img {
    display: none;
  }

  #mobileImg {
    display: block;
    height: 400px;
    width: 410px;
    position: relative;
  }

  .email {
    position: relative;
    right: 90px;
    width: 480px;
    bottom: 220px;
    padding-bottom: 30px;
  }
}

